--- a/src/Deepin.Email.API/appsettings.json
+++ b/src/Deepin.Email.API/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=deepin;Username=postgres;Password=postgres"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "admin",
+    "Password": "admin",
+    "QueueName": "email-service",
+    "VirtualHost": "deepin"
+  }
 }
